unpackaged/main/default/objects/Account/fields/DansCheckbox__c.field-meta.xml
<CustomField>
    <fullName>DansCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DansCheckbox</label>
    <type>Checkbox</type>
</CustomField>