unpackaged/main/default/objects/Account/fields/Demo_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Demo_Pipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Pipeline</label>
    <type>Checkbox</type>
</CustomField>