unpackaged/main/default/objects/Account/fields/Maria_s_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Maria_s_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maria&#39;s Checkbox</label>
    <type>Checkbox</type>
</CustomField>